# fanesis

./: .gitignore  README.md  example.py  pipeline_example.py  pyproject.toml
poc/: README.md  fer-finetune.ipynb  ibed.ipynb  poc.ipynb  poc_2.ipynb  poc_3.ipynb
