[tool.poetry]
name = "fanesis"
version = "0.1.0"
description = ""
authors = ["Sulthan Abiyyu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
networkx = "^3.1"
pyvis = "^0.3.2"
facenet-pytorch = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
